--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <div class="membership-description">
-                        <h2>Recuritment Handling</h2>
+                        <h2>Recruitment Handling</h2>
                         <p>We match the jobseekers profile with the recruiter's requirement and bring you a chance to attain your dream job. For employment related queries, reach us at careers@carator.in</p>
                     </div>
                 </div>
@@ -373,7 +373,7 @@
                             </div>
                             <div class="client-name text-center">
                                 <h5>Abhisek Bvs</h5>
-                                <p>Developer / Techincal Support</p>
+                                <p>Developer / Technical Support</p>
                             </div>
                         </div>
                     </div>
